--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -140,10 +140,11 @@ serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 ;apache2
 [program:httpd]
 command=/bin/bash /etc/apache2/foreground.sh
-stopsignal=6
+;stopsignal=6
 stdout_logfile=/var/log/supervisor/%(program_name)s.log
 stderr_logfile=/var/log/supervisor/%(program_name)s.log
 autorestart=true
+redirect_stderr=true
 
 ;[program:redis]
 ;command=redis-server /etc/redis/redis.conf
