change base image

--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -139,18 +139,12 @@ serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 ;files = relative/directory/*.ini
 ;apache2
 [program:httpd]
-command=/bin/bash /etc/apache2/foreground.sh
+command=/bin/bash /usr/local/bin/foreground.sh
 ;stopsignal=6
 stdout_logfile=/var/log/supervisor/%(program_name)s.log
 stderr_logfile=/var/log/supervisor/%(program_name)s.log
 autorestart=true
 redirect_stderr=true
-
-;[program:redis]
-;command=redis-server /etc/redis/redis.conf
-;stdout_logfile=/var/log/supervisor/%(program_name)s.log
-;stderr_logfile=/var/log/supervisor/%(program_name)s.log
-;autorestart=true
 
 [program:collectd]
 command=/usr/sbin/collectd -C /etc/collectd/collectd.conf -f
