--- a/docker/apache-config.conf
+++ b/docker/apache-config.conf
@@ -1,8 +1,8 @@
 <VirtualHost *:80>
-  ServerAdmin me@mydomain.com
-  DocumentRoot /var/www/web
+  ServerAdmin admin@jinn.vn
+  DocumentRoot /var/www/html/web
 
-  <Directory /var/www/web>
+  <Directory /var/www/html/web>
       Options Indexes FollowSymLinks MultiViews
       AllowOverride All
       Order deny,allow
