--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -94,7 +94,7 @@ serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 ;command=/bin/eventlistener    ; the program (relative uses PATH, can take args)
 ;process_name=%(program_name)s ; process_name expr (default %(program_name)s)
 ;numprocs=1                    ; number of processes copies to start (def 1)
-;events=EVENT                  ; event notif. types to subscribe to (req'd)
+;events=EVENT                  ; event notif. types to subscribe to 
 ;buffer_size=10                ; event buffer queue size (default 10)
 ;directory=/tmp                ; directory to cwd to before exec (def no cwd)
 ;umask=022                     ; umask for process (default None)
