add time to apache log

--- a/docker/apache-config.conf
+++ b/docker/apache-config.conf
@@ -21,7 +21,8 @@
       </IfModule>
   </Directory>
 
+  LogFormat "%h %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-agent}i\" %T \"%v\" %T" jinn
   ErrorLog ${APACHE_LOG_DIR}/error.log
-  CustomLog ${APACHE_LOG_DIR}/access.log combined
+  CustomLog ${APACHE_LOG_DIR}/access.log jinn
 
 </VirtualHost>
