--- a/docker/apache-config.conf
+++ b/docker/apache-config.conf
@@ -15,7 +15,7 @@
           #RewriteBase /path/to/app
           RewriteCond %{REQUEST_FILENAME} !-d
           RewriteCond %{REQUEST_FILENAME} !-f
-          RewriteRule ^ index.php [QSA,L]
+          RewriteRule ^ app.php [QSA,L]
           RewriteCond %{HTTP:Authorization} ^(.*)
           RewriteRule .* - [e=HTTP_AUTHORIZATION:%1]
       </IfModule>
